# cadence

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  search.html  tailwind.config.js  vite.config.ts
src/: App.tsx  SearchApp.tsx  main.tsx  search.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  seed.rs  state.rs  tray.rs
src-tauri/src/api/: auth.rs  mod.rs  routes.rs  server.rs
src-tauri/src/commands/: handlers.rs  mod.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: collection.rs  copy_history.rs  mod.rs  playbook.rs  prompt.rs  settings.rs  tag.rs
src-tauri/src/services/: collection_service.rs  import_export.rs  mod.rs  playbook_service.rs  prompt_service.rs  search_service.rs  settings_service.rs  tag_service.rs
src-tauri/tests/: integration_tests.rs
src/components/detail/: DetailPanel.tsx  NewPromptForm.tsx  PromptDetail.tsx  TagPills.tsx  VariantSelector.tsx
src/components/import/: ImportModal.tsx  PromptSlicer.tsx
src/components/playbook/: PlaybookBillboard.tsx  PlaybookStep.tsx  PlaybookStepper.tsx
src/components/prompt-list/: PromptList.tsx  PromptListItem.tsx
src/components/search/: FloatingSearch.tsx  SearchPreview.tsx  SearchResults.tsx
src/components/settings/: SettingsModal.tsx  ShortcutRecorder.tsx
src/components/shared/: CopyButton.tsx  Toast.tsx
src/components/sidebar/: CollectionItem.tsx  Sidebar.tsx
src/lib/: api.ts  context.tsx  hooks.ts  types.ts
