[package]
name = "cadence"
version = "0.1.0"
description = "A macOS prompt library app"
authors = ["you"]
edition = "2021"

[lib]
name = "cadence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
dirs = "5"
tauri-plugin-global-shortcut = "2"
